<resources>
    <string name="app_name">google-books-project</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Digite seu email</string>
    <string name="password_label">Senha</string>
    <string name="password_hint">Digite sua senha</string>
    <string name="login_button">Entrar\n</string>
    <string name="register_button">Registrar</string>
    <string name="name_label">Nome</string>
    <string name="name_hint">Digite seu nome</string>
    <string name="back_button_description">Voltar</string>
    <string name="google_books_api_key">AIzaSyC357yQuZ20Cy3ZSklEhWas4NbKjQ6qFi8</string>
    <string name="favorite">Favoritos</string>
    <string name="home">home</string>
    <string name="settings">configurações</string>
    <string name="genre_favorite">Gênero Favorito</string>
    <string name="genre_favorite_hint">Digite seu gênero favorito</string>
    <string name="select">Select Item</string>
    <string name="book_cover">Book Cover</string>
    <string name="configura_es">Configurações</string>
    <string name="excluir_conta">Excluir Conta</string>
    <string name="alterar_genero_favorito">Alterar Gênero Favorito</string>
    <string name="alterar_dados">Alterar Dados</string>
    <string name="digite_sua_senha">Digite sua senha\n</string>
    <string name="digite_seu_genero_favorito">Digite seu gênero favorito</string>
    <string name="alterar_senha">Alterar Senha</string>
    <string name="favorite_icon_desc">Ícone de favorito</string>
    <string name="unfavorite">Remove from favorites</string>


</resources>