<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F3"> <!-- Plano de fundo da tela -->

    <!-- Barra Superior -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="#567C8D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"> <!-- Barra superior com fundo colorido -->

        <!-- Botão de Voltar -->
        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533"
            app:srcCompat="@drawable/seta_esquerda" /> <!-- Ícone do botão de voltar -->

        <!-- Título da Barra -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/favorite"
            android:textColor="#F0F2F3"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" /> <!-- Texto que aparece no centro da barra -->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RecyclerView para exibir os itens favoritos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFavorites"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/> <!-- Exibe a lista de favoritos -->

    <!-- Barra de Navegação -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="#567C8D"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"> <!-- Barra de navegação inferior com três ícones -->

        <!-- Botão de Favoritos -->
        <ImageButton
            android:id="@+id/favoritos"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_favorite_24" /> <!-- Ícone de favoritos -->

        <!-- Botão Home -->
        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_home_24" /> <!-- Ícone de home -->

        <!-- Botão de Configurações -->
        <ImageButton
            android:id="@+id/configuracoes"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_settings_24" /> <!-- Ícone de configurações -->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
