<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F2F3"
    tools:context=".MainActivity">

    <!-- Barra de Pesquisa -->
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="310dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/et_fundo_branco"
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="8dp"
        android:hint="Autores, Títulos, ISBN, Editoras..."
        android:textColor="#AAAAAA"
        android:gravity="center_vertical|start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text" />

    <!-- Dropdown Menu -->
    <Spinner
        android:id="@+id/genre_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

    <!-- RecyclerView para exibir a lista de livros -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewBooks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/genre_spinner"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"/>

    <!-- Barra de Navegação -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:background="#567C8D"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/favoritos"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/favorite"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_favorite_24" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/configuracoes"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_settings_24" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
